--- a/Iteration/Tailspin.WebUpgraded/Web.config
+++ b/Iteration/Tailspin.WebUpgraded/Web.config
@@ -13,7 +13,7 @@
 			<section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
 			<section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
 		<section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" /><section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" /></sectionGroup></configSections>
-  
+  <!--CommentonGithub-->
   <connectionStrings>
     <add name="TailspinConnectionString" connectionString="Data Source=.;Initial Catalog=Tailspin;Integrated Security=True;Max Pool Size=1000" providerName="System.Data.SqlClient" />
   </connectionStrings>
